--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="adAppEjemplo">ca-app-pub-3940256099942544~3347511713</string>
     <string name="bannerejemplo">ca-app-pub-3940256099942544/6300978111</string>
     <string name="Banner">BANNER</string>
+    <string name="unityGameID">4056667</string>
 </resources>
